# Elk-Maven

./: .env.example  .gitignore  config.yaml  pyproject.toml
tests/: conftest.py  test_bias_detector.py  test_config.py  test_database.py  test_guru.py  test_optimizer.py  test_prompts.py  test_repository.py  test_web_api.py
youtube_university/: __init__.py  cli.py  config.py
youtube_university/agents/: __init__.py  bias_detector.py  conditions.py  gear_advisor.py  guru.py  optimizer.py  strategist.py  synthesis.py
youtube_university/database/: connection.py  migrator.py  models.py  repository.py  schema.sql
youtube_university/database/migrations/: 001_bias_and_optimization.sql  002_web_ui.sql
youtube_university/ingestion/: analyzer.py  channel_fetcher.py  pipeline.py  transcript_fetcher.py
youtube_university/prompts/: bias_detection.py  optimization.py  transcript_analysis.py
youtube_university/utils/: logging_config.py  rate_limiter.py  retry.py
youtube_university/web/: app.py
youtube_university/web/routes/: chat.py  images.py  optimization.py  status.py
youtube_university/web/static/css/: style.css
youtube_university/web/static/js/: app.js  canvas.js  chat.js  sessions.js
youtube_university/web/templates/: index.html
